# mace

./: .#mace.h  .gitignore  .travis.yml  ASTYLE  LICENSE  Mace  Makefile  README.md  cmd.c  column.c  command.c  config.h.in  config.toml  cursel.c  cursor.c  draw.c  focus.c  font.c  init.lua  keys.c  lib.h  line.c  lua.c  mace.c  mace.desktop  mace.h  mace.lua  mace.toml  macerc.lua  main.c  meson.build  mouse.c  pane.c  panedraw.c  piece.c  quartzmain.c  quartzmain.m  selection.c  sequence.c  sequence.h  (+8 more)
docs/: Design.md  Development.md  Guide.md  Introduction.md  TODO.md
docs/design/: README.md  design-click-dir.xcf  design-complex-layout.xcf  design-more-tabs.xcf  design.xcf
resources/: xlib-keysyms.awk  xlib-keysyms.c  xlib-keysyms.h
resources/tomlc99/: toml.c
scripts/: install_lua53.sh
tests/: Unicode4.0  meson.build  sequence.c  utf8.c  utf8.html  utf8.txt
