seqtest = executable('sequence',
	sources: [
		'../resources/unity/src/unity.c',
		'sequence.c',
		'../sequence.c',
		'../utf8.c',
	],
)

test('Sequence Test', seqtest)

utf8test = executable('utf8',
	sources: [
		'../resources/unity/src/unity.c',
		'utf8.c',
		'../utf8.c',
	],
)

test('utf8 Test', utf8test)
